[project]
name = "sandlot"
version = "0.1.0"
description = "Baseball log parser and tagger"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py312"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["sandlot"]
src_paths = ["src"]
force_sort_within_sections = true  # Optional but ensures reordering

